# GaussBot

./: .gitignore  CREDITS.md  LICENSE  README.md  main.py  mprocs.yml  pyproject.toml  test.py
gauss_bot/: __init__.py  __main__.py  gui_util_funcs.py  icons.py  interfaces.py  main.py  matrices.py  menu.py  msg_frame_funcs.py  operaciones.py  ops_vectores.py  sistemas_ecuaciones.py  util_funcs.py  utils.py  validaciones.py  vectores.py
gauss_bot/assets/: dark_logo.xbm  light_logo.xbm
gauss_bot/assets/themes/: breeze.json  ceruleo.json  lavender.json  marsh.json  midnight.json  otono.json  sky.json  violeta.json
gauss_bot/clases/: matriz.py  sistema_ecuaciones.py  vector.py
gauss_bot/data/: config.json  matrices.json  vectores.json
gauss_bot/gui/: __init__.py  custom_frames.py  custom_tk_funcs.py  gui.py  scrollable_dropdown.py
gauss_bot/gui/custom/: __init__.py  custom_frames.py  custom_widgets.py  scrollable_dropdown.py
gauss_bot/gui/custom/adapted/: __init__.py  messagebox.py  numpad.py  scrollable_dropdown.py  scrollable_frame.py  scrollframe.py  table.py  tooltip.py
gauss_bot/gui/frames/: __init__.py  analisis.py  config.py  ecuaciones.py  home.py  inputs.py  matrices.py  nav.py  sistemas.py  vectores.py
gauss_bot/gui/frames/subframes/: __init__.py  derivadas.py  input_funcs.py  input_mats.py  input_sis.py  input_vecs.py  integrales.py  operaciones_mats.py  operaciones_vecs.py  raices.py  resolver_sis.py  sistemas.py
gauss_bot/managers/: __init__.py  binding_manager.py  func_manager.py  key_binder.py  main_manager.py  mats_manager.py  ops_manager.py  vecs_manager.py
gauss_bot/matrices/: matriz.py  ops_matrices.py  sistema_ecuaciones.py  vector.py
gauss_bot/models/: Matriz.py  SistemaEcuaciones.py  Vector.py  __init__.py  fraction_encoding.py  func.py  matriz.py  sistema_ecuaciones.py  vector.py
gauss_bot/ui/: app.py  config.json  gui.py
gauss_bot/ui/frames/: config.py  ecuaciones.py  home.py  matrices.py  nav.py  settings.py  vectores.py
gauss_bot/ui/theme/: sky.json
gauss_bot/ui/themes/: marsh.json
gauss_bot/utils/: __init__.py  gui_util_funcs.py  icons.py  paths.py  util_funcs.py
gauss_bot/vectores/: ops_vectores.py  vector.py
sistemas_lineales/: main.py  matrices.py  menu.py  sistemas_ecuaciones.py  utils.py  validaciones.py  vectores.py
src/: __init__.py  __main__.py
src/assets/themes/: invierno.json  primavera.json  verano.json  violeta.json
src/gui/: __init__.py  gui.py
src/gui/custom/: __init__.py  custom_frames.py  custom_widgets.py
src/gui/custom/adapted/: __init__.py  messagebox.py  numpad.py  scrollframe.py  table.py  tooltip.py
src/gui/frames/: __init__.py  analisis.py  config.py  home.py  inputs.py  matrices.py  nav.py  sistemas.py  vectores.py
src/gui/frames/subframes/: __init__.py  derivadas.py  input_funcs.py  input_mats.py  input_sis.py  input_vecs.py  integrales.py  operaciones_mats.py  operaciones_vecs.py  raices.py  resolver_sis.py
src/managers/: __init__.py  binding_manager.py  func_manager.py  mats_manager.py  ops_manager.py  vecs_manager.py
src/models/: __init__.py  fraction_encoding.py  func.py  matriz.py  sistema_ecuaciones.py  vector.py
src/utils/: __init__.py  gui_util_funcs.py  icons.py  paths.py  util_funcs.py
