[project]
name = "GaussBot"
version = "1.0.0"
description = "Aplicación para resolver cálculos de álgebra lineal."
requires-python = ">=3.12"
dependencies = [
    "bidict>=0.23.1",
    "customtkinter>=5.2.2",
    "matplotlib>=3.10.3",
    "sympy>=1.14.0",
]

# [tool.ruff.lint]
# select = ["ALL"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-sort-within-sections = true
order-by-type = true
relative-imports-order = "closest-to-furthest"
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"src/__init__.py" = ["E402"]
"src/managers/__init__.py" = ["I001"]
"src/utils/__init__.py" = ["I001"]
